<resources>
    <string name="app_name">Lab3-3InputControls</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_date">Select Date</string>
    <string name="button_register">Register</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="visible">Visible</string>
    <string name="heart">How is the fire on your heart?</string>
    <string name="salaryGroup">Salary Group</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string-array name="salary">
        <item>No income / salary</item>
        <item>below RM1000</item>
        <item>RM1000 to RM2000</item>
        <item>RM2001 to RM3000</item>
        <item>RM3001 to RM4000</item>
        <item>RM4001 to RM5000</item>
        <item>above RM5000</item>
    </string-array>
</resources>
