<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:hint="@string/name"
        android:inputType="textPersonName" />
    <requestFocus />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:ems="10"
            android:hint="@string/birth_date"
            android:inputType="date" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="selectDate"
            android:text="@string/select_date" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sex"
        android:layout_row="5"
        android:layout_column="0" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:orientation="horizontal"
        android:id="@+id/radioGroup_Sex">

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButton_male"
            android:checked="true"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButton_female" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/salaryGroup"
        android:layout_row="7"
        android:layout_column="0" />

    <Spinner
        android:id="@+id/spinnerSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/heart"
        android:layout_row="9"
        android:layout_column="0" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="0">

        <ToggleButton
            android:id="@+id/toggleButtonOnOff"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="showPicture"
            android:text="@string/visible"
            android:layout_row="0"
            android:layout_column="0"/>

        <ImageView
            android:id="@+id/imageViewIconFire"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fire"
            android:layout_row="0"
            android:layout_column="1"/>
    </GridLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="11"
        android:onClick="showMessage"
        android:text="@string/button_register" />
</GridLayout>

